# Contract-Review-And-Risk-Analysis-Agent

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  render.yaml  requirements.txt  run_gradio.py
app/: config.py  gradio_ui.py  main.py  orchestrator.py
app/models/: agent_models.py
app/services/: clause_extractor.py  llm_factory.py  pdf_loader.py  revision_agent.py  risk_classifier.py
