[project]
name = "contract-review-and-risk-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=3.1.0",
    "fastapi>=0.121.1",
    "gradio>=4.0.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-groq>=0.1.0",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ruff>=0.14.4",
]
